# bootstrap-agentic

./: .env.example  .gitignore  .lintstagedrc  AGENTS.md  README.md  biome.jsonc  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.ps1  start.sh
backend/: config.py  config.ts  db.py  db.ts  drizzle.config.ts  env.ts  main.py  main.ts  package.json  tsconfig.json  vitest.config.ts
backend/agent/: loop.py  loop.ts  prompts.py  prompts.ts
backend/agent/tools/: __init__.py  calculator.py  calculator.ts  index.ts
backend/drizzle/: 0000_sturdy_shen.sql
backend/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/models/: __init__.py  index.ts  message.py  message.ts  thread.py  thread.ts
backend/routers/: threads.py
backend/routers/threads/: threads.handlers.ts  threads.index.ts  threads.routes.ts
backend/schemas/: thread.py  thread.ts
backend/services/: llm.py  llm.ts
backend/tests/: setup.ts  threads.test.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatWindow.tsx  ToolCallDisplay.tsx
tests/: conftest.py  test_threads.py
